[package]
name = "lp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
bounded-integer = { version = "0.5.2", features = ["types"] }
cpal = "0.13.5"
duct = "0.13.5"
eyre = "0.6.8"
i3_ipc = "0.15.0-alpha"
itertools = "0.10.3"
midir = "0.7"
once_cell = "1.10.0"
parking_lot = "0.12.0"
# rdev = "0.5.1"
signal-hook = "0.3.13"
thiserror = "1.0.31"
usfx = "0.1.3"

[patch.crates-io]
i3_ipc = { git = "https://github.com/leshow/tokio-i3ipc" }
